manifests/sample-app/3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome
  namespace: application
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 80
  selector:
    app: welcome
